--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,16 @@ build/Release
 
 # Dependency directory
 node_modules
+jspm_packages
 
 # Optional npm cache directory
 .npm
 
 # Optional REPL history
 .node_repl_history
+
+# Babel output directories
+dist*
+
+# Aethernet config
+aetherconfig.js
