Cosmetic enhancements to desktop
Added SASS CSS pre-processor and added a nifty parallax drop shadow for
the desktop icons.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "aethernet-service-registry-client": "file:../aethernet-service-registry-client",
     "body-parser": "^1.12.4",
     "express": "^4.12.4",
+    "gulp-sass": "^2.2.0",
     "require-dir": "^0.3.0",
     "thalassa": "^0.4.1"
   },
