--- a/package.json
+++ b/package.json
@@ -42,33 +42,25 @@
   },
   "jspm": {
     "dependencies": {
-      "aurelia-animator-css": "github:aurelia/animator-css@^0.16.0",
-      "aurelia-binding": "github:aurelia/binding@^0.9.1",
-      "aurelia-bootstrapper": "github:aurelia/bootstrapper@^0.17.0",
-      "aurelia-dependency-injection": "github:aurelia/dependency-injection@^0.10.1",
-      "aurelia-event-aggregator": "github:aurelia/event-aggregator@^0.8.0",
-      "aurelia-fetch-client": "github:aurelia/fetch-client@^0.2.0",
-      "aurelia-framework": "github:aurelia/framework@^0.16.0",
-      "aurelia-history": "github:aurelia/history@^0.7.0",
-      "aurelia-history-browser": "github:aurelia/history-browser@^0.8.0",
-      "aurelia-html-import-template-loader": "github:aurelia/html-import-template-loader@^0.2.2",
-      "aurelia-http-client": "github:aurelia/http-client@^0.11.0",
-      "aurelia-loader": "github:aurelia/loader@^0.9.0",
-      "aurelia-loader-default": "github:aurelia/loader-default@^0.10.0",
-      "aurelia-logging": "github:aurelia/logging@^0.7.0",
-      "aurelia-metadata": "github:aurelia/metadata@^0.8.0",
-      "aurelia-path": "github:aurelia/path@^0.9.0",
-      "aurelia-route-recognizer": "github:aurelia/route-recognizer@^0.7.0",
-      "aurelia-router": "github:aurelia/router@^0.12.0",
-      "aurelia-task-queue": "github:aurelia/task-queue@^0.7.0",
-      "aurelia-templating": "github:aurelia/templating@^0.15.3",
-      "aurelia-templating-binding": "github:aurelia/templating-binding@^0.15.0",
-      "aurelia-templating-resources": "github:aurelia/templating-resources@^0.15.2",
-      "aurelia-templating-router": "github:aurelia/templating-router@^0.16.1",
+      "aurelia-animator-css": "npm:aurelia-animator-css@^1.0.0-beta.1.1.2",
+      "aurelia-bootstrapper": "npm:aurelia-bootstrapper@^1.0.0-beta.1.1.4",
+      "aurelia-event-aggregator": "npm:aurelia-event-aggregator@^1.0.0-beta.1.2.0",
+      "aurelia-fetch-client": "npm:aurelia-fetch-client@^1.0.0-beta.1.1.1",
+      "aurelia-framework": "npm:aurelia-framework@^1.0.0-beta.1.1.4",
+      "aurelia-history-browser": "npm:aurelia-history-browser@^1.0.0-beta.1.1.4",
+      "aurelia-loader-default": "npm:aurelia-loader-default@^1.0.0-beta.1.1.3",
+      "aurelia-logging-console": "npm:aurelia-logging-console@^1.0.0-beta.1.1.4",
+      "aurelia-pal-browser": "npm:aurelia-pal-browser@^1.0.0-beta.1.1.4",
+      "aurelia-polyfills": "npm:aurelia-polyfills@^1.0.0-beta.1.0.3",
+      "aurelia-router": "npm:aurelia-router@^1.0.0-beta.1.1.3",
+      "aurelia-templating-binding": "npm:aurelia-templating-binding@^1.0.0-beta.1.1.2",
+      "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.1.3",
+      "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.1.2",
       "bootstrap": "github:twbs/bootstrap@^3.3.5",
-      "fetch": "github:github/fetch@^0.9.0",
-      "font-awesome": "npm:font-awesome@^4.4.0",
-      "mutationobservers": "npm:mutationobservers@^0.0.1"
+      "fetch": "github:github/fetch@^0.11.0",
+      "font-awesome": "npm:font-awesome@^4.5.0",
+      "mutationobservers": "npm:mutationobservers@^0.0.1",
+      "text": "github:systemjs/plugin-text@^0.0.3"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.22",
